fixed minor CSS glitches on mobile Safari

--- a/static/css/micro-masonry.css
+++ b/static/css/micro-masonry.css
@@ -31,7 +31,12 @@
     overflow: hidden;
     position: relative;
     background: transparent;
-    display: flex;
+    display: block;
+}
+.masonry-grid li > a {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 .masonry-grid--columns li {
     margin-bottom: var(--masonry-gap);
